tests/reference/asr-continue_compilation_1-04b6d40.stderr
semantic error: Derived type `another_undefined_type` is not defined
  --> tests/errors/continue_compilation_1.f90:50:9
   |
50 |         type(another_undefined_type) :: s3_in_subroutine
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type used here is not defined in any scope

semantic error: c_char should have a length of 1
  --> tests/errors/continue_compilation_1.f90:74:9
   |
74 |         character(len=2, kind=c_char), intent(in) :: c
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_1.f90:72:5 - 75:20
   |
72 |        subroutine s(c) bind(c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
75 |        end subroutine s
   | ...^^^^^^^^^^^^^^^^^^^^ 

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
   --> tests/errors/continue_compilation_1.f90:121:5 - 123:49
    |
121 |        implicit integer(a-f), real(e-z)
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
123 |        ! Put declarations below without empty lines
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `repeat` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:144:38
    |
144 |     character(3), parameter :: ar1 = repeat(["abc", "#^1", "123"], [1, 2, 3])
    |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot convert LOGICAL to REAL
   --> tests/errors/continue_compilation_1.f90:147:20
    |
147 |     real :: adwf = .true.
    |                    ^^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_1.f90:151:31
    |
151 |     integer , dimension(3) :: array
    |                               ^^^^^ redeclaration
    |
150 |     double precision array
    |                      ~~~~~ original declaration

semantic error: Array members must me of the same type as the struct
   --> tests/errors/continue_compilation_1.f90:155:53
    |
155 |     type(MyClass), parameter :: myclass_array(2) = [1, MyClass(10)]
    |                                                     ^ 

semantic error: Initialization of `myclass_array2` must reduce to a compile time constant.
   --> tests/errors/continue_compilation_1.f90:156:66
    |
156 |     type(MyClass), parameter :: myclass_array2(2) = [MyClass(1), MyClass(q1)]
    |                                                                  ^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: only 'len' and 'kind' are allowed as type parameters
   --> tests/errors/continue_compilation_1.f90:157:5
    |
157 |     character(width=10) :: str_c_1
    |     ^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: can't use a keyword argument more than once
   --> tests/errors/continue_compilation_1.f90:158:5
    |
158 |     character(len=10, len=20) :: str_c_2
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: positional type parameters cannot follow a keyword argument
   --> tests/errors/continue_compilation_1.f90:159:5
    |
159 |     character(len=10, 1) :: str_c_3
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Syntax error in CHARACTER declaration: using only 'len' keyword argument after a positional type is invalid
   --> tests/errors/continue_compilation_1.f90:160:5
    |
160 |     character(1, len=20) :: str_c_4
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Allocatable array 'x' must have a deferred shape or assumed rank
   --> tests/errors/continue_compilation_1.f90:161:34
    |
161 |     character(:), allocatable :: x(2)
    |                                  ^^^^ 

semantic error: Expecting a scalar integer or parameter annotated integer variable 
   --> tests/errors/continue_compilation_1.f90:163:26
    |
163 |     logical :: mask_size(size(arr_size))
    |                          ^^^^^^^^^^^^^^ 

semantic error: `protected` attribute is only allowed in specification part of a module
   --> tests/errors/continue_compilation_1.f90:164:5
    |
164 |     integer, protected :: protected_attr_var
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `protected` attribute is only allowed in specification part of a module
   --> tests/errors/continue_compilation_1.f90:165:5
    |
165 |     integer, parameter, protected :: protected_parameter_var
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Variable `n` cannot appear in the expression as it is not a constant
   --> tests/errors/continue_compilation_1.f90:170:27
    |
170 |       integer :: elements(n)
    |                           ^ 

semantic error: Derived type `bspline_3d` is not defined
   --> tests/errors/continue_compilation_1.f90:172:5
    |
172 |     type(bspline_3d) :: s3_in_program
    |     ^^^^^^^^^^^^^^^^ Type used here is not defined in any scope

semantic error: BOZ literal constant cannot be used in binary operations
   --> tests/errors/continue_compilation_1.f90:174:19
    |
174 |     integer::tt = b'01' * 3
    |                   ^^^^^^^^^ 

semantic error: An ALLOCATABLE variable cannot have an initialization expression
   --> tests/errors/continue_compilation_1.f90:176:29
    |
176 |     integer, allocatable :: allocate_int = 1
    |                             ^^^^^^^^^^^^^^^^ 

semantic error: An ALLOCATABLE variable cannot have an initialization expression
   --> tests/errors/continue_compilation_1.f90:177:34
    |
177 |     character(:), allocatable :: allocate_char = "H"
    |                                  ^^^^^^^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i` is not allowed
   --> tests/errors/continue_compilation_1.f90:224:8
    |
224 |        i = i + 1
    |        ^ 

semantic error:  first argument of `maskl` must be less than or equal to the BIT_SIZE of INTEGER(KIND=4)
   --> tests/errors/continue_compilation_1.f90:228:13
    |
228 |     print*, maskl(63)
    |             ^^^^^^^^^ 

semantic error: first argument of `maskr` must be less than or equal to the BIT_SIZE of INTEGER(KIND=4)
   --> tests/errors/continue_compilation_1.f90:230:13
    |
230 |     print*, maskr(63)
    |             ^^^^^^^^^ 

semantic error: first argument of `maskl` must be nonnegative
   --> tests/errors/continue_compilation_1.f90:232:13
    |
232 |     print*, maskl(-24)
    |             ^^^^^^^^^^ 

semantic error: first argument of `maskr` must be nonnegative
   --> tests/errors/continue_compilation_1.f90:234:13
    |
234 |     print*, maskr(-24)
    |             ^^^^^^^^^^ 

semantic error: The argument `matrix_a` in `matmul` must be of type Integer, Real, Complex or Logical
   --> tests/errors/continue_compilation_1.f90:236:21
    |
236 |     print *, matmul(a1, b1)
    |                     ^^ 

semantic error: The argument `matrix_b` in `matmul` must be of type Integer, Real or Complex if first matrix is of numeric type
   --> tests/errors/continue_compilation_1.f90:238:25
    |
238 |     print *, matmul(b1, a1)
    |                         ^^ 

semantic error: The `matmul` intrinsic doesn't handle logical type yet
   --> tests/errors/continue_compilation_1.f90:240:14
    |
240 |     print *, matmul(a2, b1)
    |              ^^^^^^^^^^^^^^ 

semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 3
   --> tests/errors/continue_compilation_1.f90:242:21
    |
242 |     print *, matmul(a3, b1)
    |                     ^^ 

semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 4
   --> tests/errors/continue_compilation_1.f90:244:25
    |
244 |     print *, matmul(b1, b4)
    |                         ^^ 

semantic error: The argument `matrix_b` in `matmul` must be of rank 2, provided an array with rank, 1
   --> tests/errors/continue_compilation_1.f90:246:24
    |
246 |     print *, matmul(a, b)
    |                        ^ 

semantic error: `transpose` accepts arrays of rank 2 only, provided an array with rank, 1
   --> tests/errors/continue_compilation_1.f90:248:24
    |
248 |     print *, transpose(a)
    |                        ^ 

semantic error: Kind of all the arguments of Mergebits must be the same
   --> tests/errors/continue_compilation_1.f90:250:14
    |
250 |     print *, merge_bits(8, 12_8, 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Mergebits must be the same
   --> tests/errors/continue_compilation_1.f90:252:14
    |
252 |     print *, merge_bits(a5, b5, c5)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Second argument of modulo cannot be 0
   --> tests/errors/continue_compilation_1.f90:268:14
    |
268 |     print *, modulo(1, 0)
    |              ^^^^^^^^^^^^ 

semantic error: Procedure 'my_func' accepts 2 arguments, but 3 were provided
   --> tests/errors/continue_compilation_1.f90:270:5
    |
270 |     call my_func(y=1, x=2, z=1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of arguments to 'my_func'

semantic error: Result of `nint` overflows its kind(4)
   --> tests/errors/continue_compilation_1.f90:273:13
    |
273 |     print*, nint(1e12_8)
    |             ^^^^^^^^^^^^ 

semantic error: Result of `nint` overflows its kind(4)
   --> tests/errors/continue_compilation_1.f90:274:13
    |
274 |     print*, nint(1000000000000.0000000000000000d0)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Invalid argument `hello` supplied
   --> tests/errors/continue_compilation_1.f90:276:5
    |
276 |     OPEN(file="numbers", hello="world")
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_1.f90:278:5
    |
278 |     i1 = 3
    |     ^^^^^^ assignment here
    |
130 |     integer, parameter :: i1 = 2
    |                           ~~~~~~ declared as constant

semantic error: Expected 0 or 1 arguments, got 2 arguments instead.
   --> tests/errors/continue_compilation_1.f90:280:5
    |
280 |     call FLUSH(1, 2)
    |     ^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `verify` intrinsic must be a scalar
   --> tests/errors/continue_compilation_1.f90:282:39
    |
282 |     print*, verify(string, set, kind= [4, 4] )
    |                                       ^^^^^^ 

semantic error: arguments of `and` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:283:14
    |
283 |     print *, and([1, 2, 3], [1, 2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The shift argument of 'dshiftl' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:285:28
    |
285 |     print *, dshiftl(1, 2, 34)
    |                            ^^ 

semantic error: The shift argument of 'dshiftl' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:286:28
    |
286 |     print *, dshiftl(1, 2, -2)
    |                            ^^ 

semantic error: The shift argument of 'dshiftr' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:288:28
    |
288 |     print *, dshiftr(1, 2, 34)
    |                            ^^ 

semantic error: The shift argument of 'dshiftr' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:289:28
    |
289 |     print *, dshiftr(1, 2, -2)
    |                            ^^ 

semantic error: arguments of `selected_int_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:291:14
    |
291 |     print *, selected_int_kind([1,2,3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `selected_real_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:292:14
    |
292 |     print *, selected_real_kind([1,2,3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: arguments of `selected_char_kind` intrinsic must be scalar
   --> tests/errors/continue_compilation_1.f90:293:14
    |
293 |     print *, selected_char_kind(['c', 'a', 'b'])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:302:30
    |
302 |     print *, sum(arr1, dim = 2)
    |                              ^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:303:30
    |
303 |     print *, sum(arr1, dim = -1)
    |                              ^^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:304:44
    |
304 |     print *, sum(arr1, mask = mask1, dim = 2)
    |                                            ^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Sum` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:305:44
    |
305 |     print *, sum(arr1, mask = mask1, dim = -1)
    |                                            ^^ Must have 0 < dim <= 1 for array of rank 1

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:307:34
    |
307 |     print *, product(arr2, dim = 3)
    |                                  ^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:308:34
    |
308 |     print *, product(arr2, dim = -1)
    |                                  ^^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:309:48
    |
309 |     print *, product(arr2, mask = mask2, dim = 3)
    |                                                ^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Product` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:310:48
    |
310 |     print *, product(arr2, mask = mask2, dim = -1)
    |                                                ^^ Must have 0 < dim <= 2 for array of rank 2

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:312:34
    |
312 |     print *, iparity(arr3, dim = 4)
    |                                  ^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:313:34
    |
313 |     print *, iparity(arr3, dim = -1)
    |                                  ^^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:314:48
    |
314 |     print *, iparity(arr3, mask = mask3, dim = 4)
    |                                                ^ Must have 0 < dim <= 3 for array of rank 3

semantic error: `dim` argument of the `Iparity` intrinsic is out of bounds
   --> tests/errors/continue_compilation_1.f90:315:48
    |
315 |     print *, iparity(arr3, mask = mask3, dim = -1)
    |                                                ^^ Must have 0 < dim <= 3 for array of rank 3

semantic error: Expected logical expression in if statement, but recieved integer instead
   --> tests/errors/continue_compilation_1.f90:317:9
    |
317 |     if (q1) q1 = 1
    |         ^^ integer expression, expected logical

semantic error: Expected logical expression in if statement, but recieved real instead
   --> tests/errors/continue_compilation_1.f90:318:9
    |
318 |     if (r1) r1 = 1.0
    |         ^^ real expression, expected logical

semantic error: Expected logical expression in if statement, but recieved string instead
   --> tests/errors/continue_compilation_1.f90:319:9
    |
319 |     if (c1) c1 = 'a'
    |         ^^ string expression, expected logical

semantic error: The ranks of the `array` and `mask` arguments of the `Sum` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:324:18
    |
324 |     print *, sum(arr1, mask2)
    |                  ^^^^  ^^^^^ `array` is rank 1, but `mask` is rank 2

semantic error: The ranks of the `array` and `mask` arguments of the `Sum` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:325:18
    |
325 |     print *, sum(arr2, mask3, 2)
    |                  ^^^^  ^^^^^ `array` is rank 2, but `mask` is rank 3

semantic error: The shapes of the `array` and `mask` arguments of the `Iparity` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:326:22
    |
326 |     print *, iparity(arr2, mask4)
    |                      ^^^^  ^^^^^ `array` has shape [2,3], but `mask` has shape [3,2]

semantic error: The shapes of the `array` and `mask` arguments of the `Iparity` intrinsic must be the same
   --> tests/errors/continue_compilation_1.f90:327:22
    |
327 |     print *, iparity(arr3, mask5, 3)
    |                      ^^^^  ^^^^^ `array` has shape [2,1,3], but `mask` has shape [2,3,1]

semantic error: Argument to 'present' must be a variable, but got an expression
   --> tests/errors/continue_compilation_1.f90:330:22
    |
330 |     print *, present(a + 1)
    |                      ^^^^^ Expected a variable here

semantic error: Argument to 'present' must be an optional dummy argument
   --> tests/errors/continue_compilation_1.f90:333:22
    |
333 |     print *, present(a)
    |                      ^ This variable is not 'optional'

semantic error: Different shape for arguments `array` and `mask` for pack intrinsic (3 and 4)
   --> tests/errors/continue_compilation_1.f90:335:30
    |
335 |     print *, pack([1, 2, 3], [.true., .true., .true., .true.])
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: reshape accepts arrays for `source` argument, found string instead.
   --> tests/errors/continue_compilation_1.f90:337:22
    |
337 |     print *, reshape("hello", [2, 3])
    |                      ^^^^^^^ 

semantic error: reshape accepts arrays for `source` argument, found logical instead.
   --> tests/errors/continue_compilation_1.f90:338:22
    |
338 |     print *, reshape(.true., [2, 3])
    |                      ^^^^^^ 

semantic error: reshape accepts arrays for `shape` argument, found string instead.
   --> tests/errors/continue_compilation_1.f90:339:36
    |
339 |     print *, reshape([1, 2, 3, 4], "hello")
    |                                    ^^^^^^^ 

semantic error: reshape accepts arrays for `shape` argument, found logical instead.
   --> tests/errors/continue_compilation_1.f90:340:36
    |
340 |     print *, reshape([1, 2, 3, 4], .false.)
    |                                    ^^^^^^^ 

semantic error: reshape accepts `source` array with size greater than or equal to size specified by `shape` array
   --> tests/errors/continue_compilation_1.f90:342:14
    |
342 |     print *, reshape([1, 2, 3, 4], [2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `shape` specifies size of 6 which exceeds the `source` array size of 4

semantic error: Division by zero
   --> tests/errors/continue_compilation_1.f90:345:14
    |
345 |     print *, 1/0
    |              ^^^ 

semantic error: Division by zero
   --> tests/errors/continue_compilation_1.f90:346:14
    |
346 |     print *, x/zero
    |              ^^^^^^ 

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:347:14
    |
347 |     print *, v**str
    |              ^  ^^^ type mismatch (real and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:348:14
    |
348 |     print *, str**v
    |              ^^^  ^ type mismatch (string and real)

semantic error: The shift argument of 'shiftl' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:350:24
    |
350 |     print *, shiftl(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'shiftl' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:351:24
    |
351 |     print *, shiftl(2, -3)
    |                        ^^ 

semantic error: The shift argument of 'shiftr' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:352:24
    |
352 |     print *, shiftr(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'shiftr' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:353:24
    |
353 |     print *, shiftr(2, -3)
    |                        ^^ 

semantic error: The shift argument of 'rshift' intrinsic must be less than or equal to the bit size of the integer
   --> tests/errors/continue_compilation_1.f90:354:24
    |
354 |     print *, rshift(2, 34)
    |                        ^^ Shift value is 34, but bit size of integer is 32

semantic error: The shift argument of 'rshift' intrinsic must be non-negative integer
   --> tests/errors/continue_compilation_1.f90:355:24
    |
355 |     print *, rshift(2, -3)
    |                        ^^ 

semantic error: Input to `Sum` is expected to be numeric, but got string[:]
   --> tests/errors/continue_compilation_1.f90:357:18
    |
357 |     print *, sum([c1])
    |                  ^^^^ must be integer, real or complex type

semantic error: Input to `Product` is expected to be numeric, but got string[:]
   --> tests/errors/continue_compilation_1.f90:358:22
    |
358 |     print *, product([c1])
    |                      ^^^^ must be integer, real or complex type

semantic error: Input to `MinVal` is expected to be of integer, real or character type, but got complex[:]
   --> tests/errors/continue_compilation_1.f90:359:21
    |
359 |     print *, minval([c])
    |                     ^^^ must be integer, real or character type

semantic error: Input to `MaxVal` is expected to be of integer, real or character type, but got complex[:]
   --> tests/errors/continue_compilation_1.f90:360:21
    |
360 |     print *, maxval([c])
    |                     ^^^ must be integer, real or character type

semantic error: Argument to intrinsic `Sum` is expected to be an array, found: integer
   --> tests/errors/continue_compilation_1.f90:362:14
    |
362 |     print *, sum(q1)
    |              ^^^^^^^ 

semantic error: Argument to intrinsic `Product` is expected to be an array, found: real
   --> tests/errors/continue_compilation_1.f90:363:14
    |
363 |     print *, product(r1)
    |              ^^^^^^^^^^^ 

semantic error: Argument to intrinsic `MinVal` is expected to be an array, found: integer
   --> tests/errors/continue_compilation_1.f90:364:14
    |
364 |     print *, minval(q1)
    |              ^^^^^^^^^^ 

semantic error: Argument to intrinsic `MaxVal` is expected to be an array, found: real
   --> tests/errors/continue_compilation_1.f90:365:14
    |
365 |     print *, maxval(r1)
    |              ^^^^^^^^^^ 

semantic error: 'mask' argument of 'sum' intrinsic must be logical
   --> tests/errors/continue_compilation_1.f90:367:14
    |
367 |     print *, sum([1, 2, 3], mask = [1, 2, 3])
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:368:5
    |
368 |     z1 = y 
    |     ^^   ^ type mismatch (real and logical)

semantic error: reshape accepts arrays for `pad` argument, found integer instead.
   --> tests/errors/continue_compilation_1.f90:370:50
    |
370 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], 0)
    |                                                  ^ 

semantic error: reshape accepts arrays for `order` argument, found integer instead.
   --> tests/errors/continue_compilation_1.f90:371:55
    |
371 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [0], 0)
    |                                                       ^ 

semantic error: `pad` argument of reshape intrinsic must have same type and kind as `source` argument, found pad type real[:] and kind 4 source type integer[:] and kind 4 instead.
   --> tests/errors/continue_compilation_1.f90:372:50
    |
372 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [1.2])
    |                                                  ^^^^^ 

semantic error: `pad` argument of reshape intrinsic must have same type and kind as `source` argument, found pad type integer[:] and kind 8 source type integer[:] and kind 4 instead.
   --> tests/errors/continue_compilation_1.f90:373:50
    |
373 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], [0_8])
    |                                                  ^^^^^ 

semantic error: reshape accepts `order` array with integer elements
   --> tests/errors/continue_compilation_1.f90:375:58
    |
375 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], order = [1.0, 2.0])
    |                                                          ^^^^^^^^^^ 

semantic error: reshape accepts `order` array as a permutation of elements from 1 to 2
   --> tests/errors/continue_compilation_1.f90:376:58
    |
376 |     print *, reshape([1, 2, 3, 4, 5, 6], [2, 3], order = [2, 3])
    |                                                          ^^^^^^ 

semantic error: `mask` argument to `count` intrinsic must be a logical array
   --> tests/errors/continue_compilation_1.f90:378:20
    |
378 |     print *, count(1)
    |                    ^ 

semantic error: `mask` argument to `count` intrinsic must be a logical array
   --> tests/errors/continue_compilation_1.f90:379:20
    |
379 |     print *, count([2])
    |                    ^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_1.f90:381:5
    |
381 |     a_real = [logical::]
    |     ^^^^^^   ^^^^^^^^^^^ type mismatch (real[:] and logical[:])

semantic error: Input to `Iparity` is expected to be an integer, but got string[:]
   --> tests/errors/continue_compilation_1.f90:384:22
    |
384 |     print *, iparity(["a", "b"])
    |                      ^^^^^^^^^^ must be of integer type

semantic error: The `mask` argument to `parity` must be logical, but got string[:]
   --> tests/errors/continue_compilation_1.f90:385:21
    |
385 |     print *, parity(["a", "b"])
    |                     ^^^^^^^^^^ must be logical type

semantic error: `shape` array in reshape intrinsic should be of constant size
   --> tests/errors/continue_compilation_1.f90:388:30
    |
388 |     matrix = reshape(source, shape_, pad=[0])
    |                              ^^^^^^ not a constant size array

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_1.f90:388:5
    |
388 |     matrix = reshape(source, shape_, pad=[0])
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Complex variable 'c' only has %re, %im, and %kind members, not 'mymember'
   --> tests/errors/continue_compilation_1.f90:393:14
    |
393 |     print *, c%mymember
    |              ^^^^^^^^^^ 

semantic error: Character variable 'c1' only has %len and %kind members, not 'mymember'
   --> tests/errors/continue_compilation_1.f90:395:14
    |
395 |     print *, c1%mymember
    |              ^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'present' intrinsic. It accepts exactly 1 arguments.
   --> tests/errors/continue_compilation_1.f90:397:14
    |
397 |     print *, present(x,x)
    |              ^^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'present' intrinsic. It accepts exactly 1 arguments.
   --> tests/errors/continue_compilation_1.f90:398:14
    |
398 |     print *, present()
    |              ^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'ieor' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_1.f90:399:14
    |
399 |     print *, ieor(x)
    |              ^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'ieor' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_1.f90:400:14
    |
400 |     print *, ieor()
    |              ^^^^^^ 

semantic error: `exit` statements cannot be outside of loops or blocks
   --> tests/errors/continue_compilation_1.f90:402:5
    |
402 |     exit
    |     ^^^^ 

semantic error: Required argument `y` at position 2 is missing in function call
   --> tests/errors/continue_compilation_1.f90:405:18
    |
405 |     call my_func(10)
    |                  ^^ 

semantic error: Required argument `x` is missing in function call
   --> tests/errors/continue_compilation_1.f90:406:5
    |
406 |     call my_func()
    |     ^^^^^^^^^^^^^^ 

semantic error: Required argument `extra_arg` is missing in function call
   --> tests/errors/continue_compilation_1.f90:410:5
    |
410 |     call obj%display()
    |     ^^^^^^^^^^^^^^^^^^ 

semantic error: Shape mismatch in `allocate` statement.
   --> tests/errors/continue_compilation_1.f90:412:14
    |
412 |     allocate(arr4(5), source=[1, 2, 3])
    |              ^^^^^^^         ^^^^^^^^^ shape mismatch in dimension 1

semantic error: Type mismatch: The `source` argument in `allocate` must have the same type as the allocated variable.
Expected type: integer[:] allocatable, but got: real.
   --> tests/errors/continue_compilation_1.f90:413:14
    |
413 |     allocate(arr4(5), source=v)
    |              ^^^^^^^         ^ incompatible types in `allocate` statement

semantic error: Dimension mismatch in `allocate` statement.
   --> tests/errors/continue_compilation_1.f90:414:14
    |
414 |     allocate(arr4(3), source=reshape([1, 2, 3, 4, 5, 6], [2, 3]))
    |              ^^^^^^^         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mismatch in dimensions between allocated variable and `source`

semantic error: Cannot allocate an array from a scalar source.
   --> tests/errors/continue_compilation_1.f90:415:14
    |
415 |     allocate(arr4, source=7)
    |              ^^^^ allocated variable is an array, but `source` is a scalar

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_1.f90:417:5
    |
417 |     call logger % add_log_file(filename=filename)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 1-th argument not specified for add_log_file

semantic error: Required argument `unit` is missing in function call
   --> tests/errors/continue_compilation_1.f90:418:5
    |
418 |     call logger % add_log_file()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `allocate` statement only accepts four keyword arguments: `stat`, `errmsg`, `source` and `mold`
   --> tests/errors/continue_compilation_1.f90:420:5
    |
420 |     allocate(arr5, status=q1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 2 and 3 in array constructor
   --> tests/errors/continue_compilation_1.f90:423:21
    |
423 |     print *, ["aa", "aaa"]
    |                     ^^^^^ 

semantic error: The argument `mask` must be of rank 2, an array with rank 1 was provided.
   --> tests/errors/continue_compilation_1.f90:425:25
    |
425 |     print *, pack(arr2, mask1)
    |                         ^^^^^ 

semantic error: Variable protected_module_my_class_obj is PROTECTED and cannot appear in LHS of assignment
   --> tests/errors/continue_compilation_1.f90:428:5
    |
428 |     protected_module_my_class_obj%value = 42
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Invalid syntax of derived type for array constructor
   --> tests/errors/continue_compilation_1.f90:430:12
    |
430 |     arr = [type(MyClass) :: v1, v2, v3]
    |            ^^^^^^^^^^^^^ help: use just the derived type name 'myclass', without the keyword 'type'

semantic error: Class type `NonExistingType` is not defined
   --> tests/errors/continue_compilation_1.f90:432:11
    |
432 |     arr = [NonExistingType :: v1, v2, v3]
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: DATA statement element count mismatch: 8 elements on left-hand side, 10 values on right-hand side
   --> tests/errors/continue_compilation_1.f90:435:5
    |
435 |     data j2, x2, (y2(i2), i2=1,3), k2 / 1,2,3,4,5,6,7,3*8 /
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: DO loop label 'q1' already defined
   --> tests/errors/continue_compilation_1.f90:437:9 - 439:10
    |
437 |        q1: do q1 = 1, 3
    |            ^^^^^^^^^^^^...
...
    |
439 |        end do q1
    | ...^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:444:5
    |
444 |     WRITE (6, fmt_i1)
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:449:5
    |
449 |     print fmt_i2, "test"
    |     ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assigned format (using integer variable as format specifier) is not supported. Use character variables instead.
   --> tests/errors/continue_compilation_1.f90:454:5
    |
454 |     read (5, fmt_i3)
    |     ^^^^^^^^^^^^^^^^ 
